# logankells.github.io

./: .buildinfo  .gitignore  CNAME  Makefile  README.md  _config.yml  _toc.yml  genindex.html  intro.html  intro.md  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: environment.pickle  intro.doctree
.doctrees/android_development/: city-explorer-app.doctree  overview-android-development.doctree
.doctrees/course_reviews/: overview-course-reviews.doctree  review-android-programming.doctree
.doctrees/jupyter_book_examples/: markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
.doctrees/machine_learning/: computer-vision-video-game-ai.doctree  overview-machine-learning.doctree  projects-machine-learning.doctree
.doctrees/swift_ui/: overview-swift-ui.doctree  recipe-list.doctree
_sources/: intro.md  markdown-notebooks.ipynb
_sources/android_development/: city-explorer-app.md  overview-android-development.md  reddit-app.md
_sources/course_reviews/: review-android-programming.md
_sources/jupyter_book_examples/: markdown-notebooks.ipynb
_sources/machine_learning/: computer-vision-video-game-ai.md
_sources/react/: javascript-examples.md  overview-react-guides.md  overview-react.md  react-context-dark-theme-example.md  react-fetch-data-type-safety.md  react-render-list.md  react-update-state-with-arrow-function.md  react-user-form-example.md
_sources/resume/: resume_logan_kells.md
_sources/swift_ui/: overview-swift-ui.md  recipe-list.md
android_development/: city-explorer-app.html  overview-android-development.html  reddit-app.html
course_reviews/: overview-course-reviews.html  review-android-programming.html
docs/: _config.yml  _toc.yml  intro.md  requirements.txt
docs/android_development/: city-explorer-app.md
docs/css/: styles.css
docs/machine_learning/: behavior-testing-bert-for-sentiment-analysis.md  computer-vision-video-game-ai.md  (+4 more)
html/: genindex.html  objects.inv  searchindex.js
jupyter_book_examples/: markdown-notebooks.html  markdown.html  notebooks.html
machine_learning/: behavior-testing-bert-for-sentiment-analysis.html  computer-vision-video-game-ai.html  machine-learning.html  overview-deep-learning.html  overview-machine-learning.html  overview-nlp.html  projects-machine-learning.html
react/: javascript-examples.html  overview-javascript-guides.html  overview-javascript.html  overview-react-guides.html  overview-react.html  react-context-dark-theme-example.html  react-create-radiogroup-component.html  react-custom-hook-use-previous.html  react-fetch-data-type-safety.html  react-managing-state-within-component.html  react-render-list.html  react-update-state-with-arrow-function.html  react-user-form-example.html
resume/: resume_logan_kells.html
swift_ui/: overview-swift-ui.html  recipe-list.html
(+30 files in other folders)
